[package]
name = "admirable-parser"
version = "0.2.0"
authors = ["Admir Saheta"]
license = "MIT"
repository = "https://github.com/admirsaheta/admirable.rs"
description = "A blazingly fast parser for Shopify GraphQL Queries"
keywords = ["graphql", "parser", "graphql-tooling", "shopify"]
categories = [
  "compilers",
  "development-tools",
  "parser-implementations",
  "parsing",
  "web-programming",
]
edition = "2021"


[dependencies]
criterion = "0.3.0"
miette = { version = "3.2.0", features = ["fancy"] }
thiserror = "1.0.30"
annotate-snippets = "0.9.1"
expect-test = "1.1"
unindent = "0.1.7"
pretty_assertions = "0.7.1"
rowan = "0.15.5"

